# PA---Laboratorio-3

./: .gitignore  CMakeLists.txt  Categoria.h  Gen_videojuego.h  IUsuario.h  IVideojuego.h  Ivideojuego.cpp  Jugador.h  README.md  Suscripcion.cpp  Suscripcion.h  Usuario.cpp  UsuarioController.cpp  UsuarioController.h  VideojuegoController.h  main.cpp  main.h
Classes/: Categoria.cpp  Categoria.h  Comentario.cpp  Comentario.h  DatosSuscripcion.cpp  DatosSuscripcion.h  Desarrollador.cpp  Desarrollador.h  Gen_videojuego.h  Individual.cpp  Individual.h  Jugador.cpp  Jugador.h  JugadorMultijugador.cpp  JugadorMultijugador.h  Multijugador.cpp  Multijugador.h  Partida.cpp  Partida.h  Suscripcion.cpp  Suscripcion.h  Tipo_Plataforma.cpp  Tipo_Plataforma.h  Usuario.cpp  Usuario.h  Videojuego.cpp  Videojuego.h  VideojuegoJugador.cpp  VideojuegoJugador.h
ColeccionesG/: IDictionary.h
Controllers/: CategoriaController.cpp  CategoriaController.h  DatosSuscripcionController.cpp  DatosSuscripcionController.h  PartidaController.cpp  PartidaController.h  UsuarioController.cpp  UsuarioController.h  VideojuegoController.cpp  VideojuegoController.h
Data Types/: DT_Date.cpp  DT_Date.h  DT_MetodoPago.h  DT_Time.cpp
DataTypes/: DT_Comentario.cpp  DT_Comentario.h  DT_Date.cpp  DT_Date.h  DT_Fecha.cpp  DT_Fecha.h  DT_InfoVideojuego.cpp  DT_InfoVideojuego.h  DT_InfoVideojuegoDesarrollador.cpp  DT_InfoVideojuegoDesarrollador.h  DT_InfoVideojuegoJugador.cpp  DT_InfoVideojuegoJugador.h  DT_MultijugadorUnidosNoFinalizados.cpp  DT_MultijugadorUnidosNoFinalizados.h  DT_MultijugadorVideojuego.cpp  DT_MultijugadorVideojuego.h  DT_NomDescVideojuego.cpp  DT_NomDescVideojuego.h  DT_NombreCategoria.cpp  DT_NombreCategoria.h  DT_NombreDescripcion.cpp  DT_NombreDescripcion.h  DT_PartidasIndividualesFinalizadas.cpp  DT_PartidasIndividualesFinalizadas.h  DT_Time.cpp  DT_Time.h  DT_VideojuegoSuscripciones.cpp  DT_VideojuegoSuscripciones.h  E_MetodoPago.h  E_PeriodoValidez.h  E_TipoCategoria.h
Factory/: Factory.cpp  Factory.h
Interfaces/: ICategoria.h  IDatosSuscripcion.h  IPartida.h  IUsuario.h  IVideojuego.h
UseCases/: AbandonarPartidaMultijugador.cpp  AbandonarPartidaMultijugador.h  AgregarCategoria.cpp  AgregarCategoria.h  AltaUsuario.cpp  AltaUsuario.h  AsignarPuntajeAVideojuego.cpp  AsignarPuntajeAVideojuego.h  CargarDatosDePrueba.cpp  CargarDatosDePrueba.h  EliminarVideojuego.cpp  EliminarVideojuego.h  FinalizarPartida.cpp  FinalizarPartida.h  IniciarPartida.cpp  IniciarPartida.h  IniciarSesion.cpp  IniciarSesion.h  PublicarVideojuego.cpp  PublicarVideojuego.h  RealizarComentario.cpp  RealizarComentario.h  SeguirJugador.cpp  SeguirJugador.h  SuscribirseAVideojuego.cpp  SuscribirseAVideojuego.h  VerInformacionDeVideojuego.cpp  VerInformacionDeVideojuego.h
Utils/: Utils.cpp  Utils.h
